--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 .dark {
-    background-color: #2c3e50;
+    background-color: #121212;
     min-height: 100vh;
 }
 
